Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,9 @@ sidebar_position: 4
 **Microsoft Graph:**
 
 - [graph openextension add](../cmd/graph/openextension/openextension-add.mdx) - creates a new open extension for a specific resource [#6627](https://github.com/pnp/cli-microsoft365/issues/6627)
+- [graph openextension get](../cmd/graph/openextension/openextension-get.mdx) - retrieve an open extension for a specific resource [#6636](https://github.com/pnp/cli-microsoft365/issues/6636)
+- [graph openextension list](../cmd/graph/openextension/openextension-list.mdx) - retrieves open extensions for a specific resource [#6635](https://github.com/pnp/cli-microsoft365/issues/6635)
+- [graph openextension remove](../cmd/graph/openextension/openextension-remove.mdx) - removes a specific open extension for a specific resource [#6637](https://github.com/pnp/cli-microsoft365/issues/6637)
 
 ### Changes
 
@@ -31,6 +34,7 @@ sidebar_position: 4
 - refactored 'pp solution get' to use util
 - added a new sample 'search parent flows' [#6624](https://github.com/pnp/cli-microsoft365/issues/6624)
 - updated project & docs dependencies
+- updated 'entra policy list' with latest supported policy types. [#6633](https://github.com/pnp/cli-microsoft365/issues/6633)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
