Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -35,6 +35,11 @@ sidebar_position: 4
 - added a new sample 'search parent flows' [#6624](https://github.com/pnp/cli-microsoft365/issues/6624)
 - updated project & docs dependencies
 - updated 'entra policy list' with latest supported policy types. [#6633](https://github.com/pnp/cli-microsoft365/issues/6633)
+- added option 'decoded' to 'accesstoken get' [#6651](https://github.com/pnp/cli-microsoft365/issues/6651)
+- fixed getting access token behind a proxy [#6290](https://github.com/pnp/cli-microsoft365/issues/6290)
+- fixed undefined in verbose logs [#6619](https://github.com/pnp/cli-microsoft365/issues/6619)
+- removed option '--outputFile' from 'spfx project upgrade' in docs [#6662](https://github.com/pnp/cli-microsoft365/issues/6662)
+- added issue link to request office hours
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
