Migrates 'adaptivecard send' to Zod.

--- a/docs/docs/cmd/adaptivecard/adaptivecard-send.mdx
+++ b/docs/docs/cmd/adaptivecard/adaptivecard-send.mdx
@@ -17,7 +17,7 @@ m365 adaptivecard send [options]
 : URL where to send the card to.
 
 `-t, --title [title]`
-: Title of the card. Specify either `title` or `card` but not both.
+: Title of the card. If you specify `title` and `card`, the `title` will be merged into the card.
 
 `-d, --description [description]`
 : Contents of the card.
