Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -39,7 +39,9 @@ sidebar_position: 4
 - fixed getting access token behind a proxy [#6290](https://github.com/pnp/cli-microsoft365/issues/6290)
 - fixed undefined in verbose logs [#6619](https://github.com/pnp/cli-microsoft365/issues/6619)
 - removed option '--outputFile' from 'spfx project upgrade' in docs [#6662](https://github.com/pnp/cli-microsoft365/issues/6662)
-- added issue link to request office hours
+- included stack trace in errors [#5660](https://github.com/pnp/cli-microsoft365/issues/5660)
+- added support for SPFx 1.21.0 [#6672](https://github.com/pnp/cli-microsoft365/issues/6672)
+- fixed bug in handling exit (Ctrl + c) gracefully [#6097](https://github.com/pnp/cli-microsoft365/issues/6097)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
