Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,10 @@ sidebar_position: 4
 
 ### New commands
 
+**Entra ID:**
+
+- [entra group member remove](../cmd/entra/group/group-member-remove.mdx) - removes members from a Microsoft Entra group [#5472](https://github.com/pnp/cli-microsoft365/issues/5472)
+
 **Microsoft Graph:**
 
 - [graph openextension add](../cmd/graph/openextension/openextension-add.mdx) - creates a new open extension for a specific resource [#6627](https://github.com/pnp/cli-microsoft365/issues/6627)
@@ -42,6 +46,8 @@ sidebar_position: 4
 - included stack trace in errors [#5660](https://github.com/pnp/cli-microsoft365/issues/5660)
 - added support for SPFx 1.21.0 [#6672](https://github.com/pnp/cli-microsoft365/issues/6672)
 - fixed bug in handling exit (Ctrl + c) gracefully [#6097](https://github.com/pnp/cli-microsoft365/issues/6097)
+- updated node version handling in ci cd commands [#6242](https://github.com/pnp/cli-microsoft365/issues/6242)
+- fixed Login fails with error: Network request failed [#6692](https://github.com/pnp/cli-microsoft365/issues/6692)
 
 ## [v10.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.5.0)
 
