--- a/docs/docs/cmd/planner/roster/roster-add.mdx
+++ b/docs/docs/cmd/planner/roster/roster-add.mdx
@@ -36,6 +36,25 @@ To be able to create a new Roster, the Planner Roster creation tenant setting sh
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions     |
+  |-----------------|-----------------|
+  | Microsoft Graph | Tasks.ReadWrite |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Tasks.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Creates a new Microsoft Planner Roster
