--- a/docs/docs/cmd/planner/roster/roster-member-get.mdx
+++ b/docs/docs/cmd/planner/roster/roster-member-get.mdx
@@ -35,6 +35,25 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions |
+  |-----------------|-------------|
+  | Microsoft Graph | Tasks.Read  |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Tasks.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Gets a specific user by user name as member of the Planner Roster.
