--- a/docs/docs/cmd/planner/roster/roster-member-list.mdx
+++ b/docs/docs/cmd/planner/roster/roster-member-list.mdx
@@ -29,6 +29,25 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions |
+  |-----------------|-------------|
+  | Microsoft Graph | Tasks.Read  |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Tasks.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Lists members of the specified Microsoft Planner Roster.
