--- a/docs/docs/cmd/planner/roster/roster-plan-list.mdx
+++ b/docs/docs/cmd/planner/roster/roster-plan-list.mdx
@@ -32,6 +32,25 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions |
+  |-----------------|-------------|
+  | Microsoft Graph | Tasks.Read  |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Tasks.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List all Planner plans contained in a Roster where the current logged in user is member of.
