--- a/docs/docs/cmd/planner/roster/roster-remove.mdx
+++ b/docs/docs/cmd/planner/roster/roster-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # planner roster remove
 
@@ -35,6 +37,25 @@ Deleting a Planner Roster will also delete the plan within the Roster.
 This command is based on an API that is currently in preview and is subject to change once the API reached general availability.
 
 :::
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions     |
+  |-----------------|-----------------|
+  | Microsoft Graph | Tasks.ReadWrite |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Tasks.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
