--- a/docs/docs/cmd/planner/task/task-add.mdx
+++ b/docs/docs/cmd/planner/task/task-add.mdx
@@ -98,6 +98,25 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                      |
+  |-----------------|--------------------------------------------------|
+  | Microsoft Graph | Tasks.ReadWrite, GroupMember.Read.All, User.Read |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                              |
+  |-----------------|----------------------------------------------------------|
+  | Microsoft Graph | Tasks.ReadWrite.All, GroupMember.Read.All, User.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Adds a Microsoft Planner task with the name for plan with the specified ID and specified bucket with the ID.
