--- a/docs/docs/cmd/planner/task/task-get.mdx
+++ b/docs/docs/cmd/planner/task/task-get.mdx
@@ -45,6 +45,33 @@ m365 planner task get [options]
 
 <Global />
 
+## Remarks
+
+:::warning
+
+When using `rosterId`, the command is based on an API that is currently in preview and is subject to change once the API reached general availability.
+
+:::
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | Tasks.Read, GroupMember.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                          |
+  |-----------------|--------------------------------------|
+  | Microsoft Graph | Tasks.Read.All, GroupMember.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Returns the Microsoft Planner task by id.
