--- a/docs/docs/cmd/planner/plan/plan-add.mdx
+++ b/docs/docs/cmd/planner/plan/plan-add.mdx
@@ -42,6 +42,25 @@ m365 planner plan add [options]
 
 - Hint: Unlike for groups, a Planner Roster can contain only 1 plan.
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | Tasks.ReadWrite, GroupMember.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                               |
+  |-----------------|-------------------------------------------|
+  | Microsoft Graph | Tasks.ReadWrite.All, GroupMember.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Adds a Microsoft Planner plan with a Group by id.
