--- a/docs/docs/cmd/planner/plan/plan-get.mdx
+++ b/docs/docs/cmd/planner/plan/plan-get.mdx
@@ -41,6 +41,25 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | Tasks.Read, GroupMember.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                          |
+  |-----------------|--------------------------------------|
+  | Microsoft Graph | Tasks.Read.All, GroupMember.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Returns the Microsoft Planner plan by id.
