--- a/docs/docs/cmd/planner/roster/roster-member-add.mdx
+++ b/docs/docs/cmd/planner/roster/roster-member-add.mdx
@@ -35,6 +35,25 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions     |
+  |-----------------|-----------------|
+  | Microsoft Graph | Tasks.ReadWrite |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Tasks.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Adds a specific user by user name as member of the Planner Roster.
