--- a/docs/docs/cmd/planner/task/task-set.mdx
+++ b/docs/docs/cmd/planner/task/task-set.mdx
@@ -100,6 +100,25 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                      |
+  |-----------------|--------------------------------------------------|
+  | Microsoft Graph | Tasks.ReadWrite, GroupMember.Read.All, User.Read |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                              |
+  |-----------------|----------------------------------------------------------|
+  | Microsoft Graph | Tasks.ReadWrite.All, GroupMember.Read.All, User.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Updates a Microsoft Planner task name of the specified task by ID.
