Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,12 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.7.0 (Beta)
+
+### Changes
+
+- added support for SPFx 1.21.1 [#6710](https://github.com/pnp/cli-microsoft365/issues/6710)
+
 ## [v10.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.6.0)
 
 ### New commands
