Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,14 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.8.0 (Beta)
+
+### Changes
+
+- refactored 'teams app install' to use util [#5314](https://github.com/pnp/cli-microsoft365/issues/5314)
+- refactored 'spo site set' to use util [#5306](https://github.com/pnp/cli-microsoft365/issues/5306)
+- refactored 'viva connections app create' to use util [#5324](https://github.com/pnp/cli-microsoft365/issues/5324)
+
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
 ### Changes
