Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,11 +6,21 @@ sidebar_position: 4
 
 ## v10.8.0 (Beta)
 
+### New commands
+
+**SharePoint Embedded:**
+
+- [spe container permission list](../cmd/spe/container/container-permission-list.mdx) - lists permissions of a SharePoint Embedded Container [#6162](https://github.com/pnp/cli-microsoft365/issues/6162)
+
 ### Changes
 
 - refactored 'teams app install' to use util [#5314](https://github.com/pnp/cli-microsoft365/issues/5314)
 - refactored 'spo site set' to use util [#5306](https://github.com/pnp/cli-microsoft365/issues/5306)
 - refactored 'viva connections app create' to use util [#5324](https://github.com/pnp/cli-microsoft365/issues/5324)
+- added login through federated identity for Azure Devops [#6649](https://github.com/pnp/cli-microsoft365/issues/6649)
+- fixed setup command app creation [#6720](https://github.com/pnp/cli-microsoft365/issues/6720)
+- fixed wrong syntax in 'spo field get'
+- fixed problem with 'spo page section add' command [#6701](https://github.com/pnp/cli-microsoft365/issues/6701)
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
