Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,14 @@ sidebar_position: 4
 
 ### New commands
 
+**Entra ID:**
+
+- [entra organization list](../cmd/entra/organization/organization-list.mdx) - Retrieves a list of organizations [#6580](https://github.com/pnp/cli-microsoft365/issues/6580)
+
+**Microsoft Graph:**
+
+- [graph openextension set](../cmd/graph/openextension/openextension-set.mdx) - update an open extension for a specific resource [#6638](https://github.com/pnp/cli-microsoft365/issues/6638)
+
 **SharePoint Embedded:**
 
 - [spe container permission list](../cmd/spe/container/container-permission-list.mdx) - lists permissions of a SharePoint Embedded Container [#6162](https://github.com/pnp/cli-microsoft365/issues/6162)
@@ -21,6 +29,7 @@ sidebar_position: 4
 - fixed setup command app creation [#6720](https://github.com/pnp/cli-microsoft365/issues/6720)
 - fixed wrong syntax in 'spo field get'
 - fixed problem with 'spo page section add' command [#6701](https://github.com/pnp/cli-microsoft365/issues/6701)
+- Migrated 'adaptivecard send' to Zod
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
