Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,10 @@ sidebar_position: 4
 
 ### New commands
 
+**CLI:**
+
+- [cli app reconsent](../cmd/cli/app/app-reconsent.mdx) - reconsents all permission scopes used in CLI for Microsoft 365 [#6657](https://github.com/pnp/cli-microsoft365/issues/6657)
+
 **Entra ID:**
 
 - [entra organization list](../cmd/entra/organization/organization-list.mdx) - Retrieves a list of organizations [#6580](https://github.com/pnp/cli-microsoft365/issues/6580)
@@ -18,7 +22,11 @@ sidebar_position: 4
 
 **SharePoint Embedded:**
 
+- [spe container add](../cmd/spe/container/container-add.mdx) - creates a new SharePoint Embedded Container [#6081](https://github.com/pnp/cli-microsoft365/issues/6081)
+- [spe container remove](../cmd/spe/container/container-remove.mdx) - removes a SharePoint Embedded Container [#6084](https://github.com/pnp/cli-microsoft365/issues/6084)
 - [spe container permission list](../cmd/spe/container/container-permission-list.mdx) - lists permissions of a SharePoint Embedded Container [#6162](https://github.com/pnp/cli-microsoft365/issues/6162)
+- [spe container recyclebinitem list](../cmd/spe/container/container-recyclebinitem-list.mdx) - lists deleted containers of a specific SharePoint embedded Container Type [#6156](https://github.com/pnp/cli-microsoft365/issues/6156)
+- [spe containertype remove](../cmd/spe/containertype/containertype-remove.mdx) - removes a SharePoint Embedded Container Type [#5992](https://github.com/pnp/cli-microsoft365/issues/5992)
 
 ### Changes
 
