Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,6 +18,7 @@ sidebar_position: 4
 
 **Microsoft Graph:**
 
+- [graph directoryextension list](../cmd/graph/directoryextension/directoryextension-list.mdx) - gets a list of directory extensions [#6615](https://github.com/pnp/cli-microsoft365/issues/6615)
 - [graph openextension set](../cmd/graph/openextension/openextension-set.mdx) - update an open extension for a specific resource [#6638](https://github.com/pnp/cli-microsoft365/issues/6638)
 
 **SharePoint Embedded:**
@@ -38,6 +39,10 @@ sidebar_position: 4
 - fixed wrong syntax in 'spo field get'
 - fixed problem with 'spo page section add' command [#6701](https://github.com/pnp/cli-microsoft365/issues/6701)
 - Migrated 'adaptivecard send' to Zod
+- Migrated 'm365 app' commands to Zod
+- Migrated 'booking business get' to Zod
+- Migrated 'context remove' to Zod
+- Migrated 'context option remove' to Zod
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
