Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -48,6 +48,8 @@ sidebar_position: 4
 - Migrated 'context option remove' to Zod
 - Enhanced [spo list get](../cmd/spo/list/list-get.mdx) command with ability to get the default list of a site [#5856](https://github.com/pnp/cli-microsoft365/issues/5856)
 - Added documentation about [handling errors in PowerShell](../user-guide/using-cli.mdx#handling-errors-in-powershell) [#6664](https://github.com/pnp/cli-microsoft365/pull/6664)
+- Removed Node.JS 18 support
+- Updated docs dependencies 
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
