Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -50,6 +50,7 @@ sidebar_position: 4
 - Added documentation about [handling errors in PowerShell](../user-guide/using-cli.mdx#handling-errors-in-powershell) [#6664](https://github.com/pnp/cli-microsoft365/pull/6664)
 - Removed Node.JS 18 support
 - Updated docs dependencies 
+- Updated dependencies 
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
