Updates 'spo tenant site unarchive' warning prompt

--- a/docs/docs/cmd/spo/tenant/tenant-site-unarchive.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-site-unarchive.mdx
@@ -34,7 +34,7 @@ To use this command, you must be a Global or SharePoint administrator.
 
 :::warning
 
-If a site remains archived for more than **seven days**, the reactivation fee will be calculated based on the entire storage capacity of the site.
+If a site has been archived for more than **seven days**, reactivating it triggers a 120-day cooldown period during which you can't archive the site again.
 
 :::
 
