Updates environment prerequisites

--- a/docs/docs/contribute/environment-setup.mdx
+++ b/docs/docs/contribute/environment-setup.mdx
@@ -4,7 +4,7 @@ Setting up your local copy of the project for development and testing is essenti
 
 :::info[Install prerequisites]
 
-Before you start contributing to this project, you will need **node@20** and **npm@10** installed.
+Before you start contributing to this project, you will need the latest LTS version of Node.js installed.
 
 :::
 
