Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,14 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.9.0 (beta)
+
+### Changes
+
+- Removed Node.JS 18 support [#6707](https://github.com/pnp/cli-microsoft365/pull/6707)
+- Added Alpine 3.20 image to Dockerfile [#6648](https://github.com/pnp/cli-microsoft365/issues/6648)
+- Fixed Docker image completion [#6718](https://github.com/pnp/cli-microsoft365/issues/6718)
+
 ## [v10.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.8.0)
 
 ### New commands
@@ -48,9 +56,6 @@ sidebar_position: 4
 - Migrated 'context option remove' to Zod
 - Enhanced [spo list get](../cmd/spo/list/list-get.mdx) command with ability to get the default list of a site [#5856](https://github.com/pnp/cli-microsoft365/issues/5856)
 - Added documentation about [handling errors in PowerShell](../user-guide/using-cli.mdx#handling-errors-in-powershell) [#6664](https://github.com/pnp/cli-microsoft365/pull/6664)
-- Removed Node.JS 18 support
-- Updated docs dependencies 
-- Updated dependencies 
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
