Removes links to GitHub wiki

--- a/docs/docs/contribute/contributing-guide.mdx
+++ b/docs/docs/contribute/contributing-guide.mdx
@@ -8,7 +8,7 @@ Sharing is caring!
 
 ## You have an idea for a new command
 
-Awesome! Good ideas are invaluable for every product. Before you start hacking away, please check if there is no similar idea already listed in the [issue list](https://github.com/pnp/cli-microsoft365/issues). This ensures that your idea is unique and not being worked on. If you don't find a similar idea, create a new issue describing your idea. Once we agree on the feature scope and architecture, the feature will be ready for building. Don't hesitate to mention this in the issue if you'd like to build the feature yourself. If it's the first time you're building a command, see the [guidance article](https://github.com/pnp/cli-microsoft365/wiki/Adding-a-command) explaining in detail what you will need at a minimum.
+Awesome! Good ideas are invaluable for every product. Before you start hacking away, please check if there is no similar idea already listed in the [issue list](https://github.com/pnp/cli-microsoft365/issues). This ensures that your idea is unique and not being worked on. If you don't find a similar idea, create a new issue describing your idea. Once we agree on the feature scope and architecture, the feature will be ready for building. Don't hesitate to mention this in the issue if you'd like to build the feature yourself.
 
 ## You have a suggestion for improving an existing command
 
