Apply suggestions from code review

--- a/docs/docs/cmd/flow/run/run-get.mdx
+++ b/docs/docs/cmd/flow/run/run-get.mdx
@@ -30,7 +30,7 @@ m365 flow run get [options]
 `--withTrigger`
 : If specified, include information about the trigger details.
 
-`--withActions [withActions]`
+`--withActions`
 : If specified, include information about all actions when no action names are specified, or provide a specified list of actions separated by commas to include only the relevant action details.
 
 ```
