--- a/docs/docs/cmd/viva/engage/engage-network-list.mdx
+++ b/docs/docs/cmd/viva/engage/engage-network-list.mdx
@@ -16,7 +16,7 @@ m365 viva engage network list [options]
 
 ```md definition-list
 `--includeSuspended`
-: Include the networks in which the user is suspended.
+: (deprecated. Use option `withSuspended` instead) Include the networks in which the user is suspended.
 
 `--withSuspended`
 : Include the networks in which the user is suspended.
