Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,11 +6,18 @@ sidebar_position: 4
 
 ## v10.9.0 (beta)
 
+**Viva:**
+
+- [viva engage community remove](../cmd/viva/engage/engage-community-remove.mdx) - removes a Viva Engage community [#6280](https://github.com/pnp/cli-microsoft365/issues/6280)
+
 ### Changes
 
 - Removed Node.JS 18 support [#6707](https://github.com/pnp/cli-microsoft365/pull/6707)
 - Added Alpine 3.20 image to Dockerfile [#6648](https://github.com/pnp/cli-microsoft365/issues/6648)
 - Fixed Docker image completion [#6718](https://github.com/pnp/cli-microsoft365/issues/6718)
+- Removed links to GitHub wiki
+- Fixed spo page commands to handle emphasis and vertical sections [#6708](https://github.com/pnp/cli-microsoft365/issues/6708)
+- Aligned `--with` and `--include` options [#6574](https://github.com/pnp/cli-microsoft365/issues/6574)
 
 ## [v10.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.8.0)
 
