--- a/docs/docs/cmd/spo/commandset/commandset-set.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-set.mdx
@@ -31,6 +31,9 @@ m365 spo commandset set [options]
 `--newTitle [newTitle]`
 : The new title of the ListView Command Set.
 
+`--description [description]`
+: Description for the SPFx app.
+
 `-l, --listType [listType]`
 : The list or library type to register the Command Set on. Allowed values are: `List`, `Library` or `SitePages`.
 
